--- a/eddystonedemo/build.gradle
+++ b/eddystonedemo/build.gradle
@@ -28,7 +28,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile(name:'kbeaconlib-release-v1.0.1', ext:'aar')
+    implementation 'com.android.support:support-v4:25.2.0'
+    implementation 'com.android.support:appcompat-v7:25.2.0'
+    implementation(name:'kbeaconlib-release-v1.0.2', ext:'aar')
 }
