--- a/ibeacondemo/src/main/AndroidManifest.xml
+++ b/ibeacondemo/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@ limitations under the License.
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
