--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@
 #Sat Jun 11 08:56:20 HKT 2016
 systemProp.http.proxyHost=mirrors.neusoft.edu.cn
 systemProp.http.proxyPort=80
+android.enableJetifier=true
+android.useAndroidX=true
