--- a/ibeacondemo/src/main/AndroidManifest.xml
+++ b/ibeacondemo/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@ limitations under the License.
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:icon="@drawable/ic_launcher"
@@ -53,6 +54,24 @@ limitations under the License.
             android:label="@string/activity_beacon_detail_title"
             android:screenOrientation="portrait" />
 
+
+        <activity
+            android:name="com.kbeacon.ibeacondemo.dfulibrary.NotificationActivity"
+            android:launchMode="singleInstance"
+            android:label="@string/DEVICE_DFU_TITLE"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.kbeacon.ibeacondemo.dfulibrary.KBeaconDFUActivity"
+            android:launchMode="singleInstance"
+            android:label="@string/DEVICE_DFU_TITLE"
+            android:screenOrientation="portrait" />
+
+
+        <service
+            android:name="com.kbeacon.ibeacondemo.dfulibrary.DFUService"
+            android:enabled="true"
+            android:exported="false" />
 
     </application>
 
