--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
@@ -16,6 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         maven {
             url 'https://maven.google.com/'
             name 'Google'
