--- a/eddystonedemo/build.gradle
+++ b/eddystonedemo/build.gradle
@@ -24,5 +24,5 @@ android {
 dependencies {
     implementation 'com.android.support:support-v4:29.2.0'
     implementation 'com.android.support:appcompat-v7:29.2.0'
-    implementation 'com.kbeacon:kbeaconlib:1.0.6'
+    implementation 'com.kkmcn.kbeaconlib:kbeaconlib:1.0.9'
 }
