--- a/ibeacondemo/build.gradle
+++ b/ibeacondemo/build.gradle
@@ -30,7 +30,7 @@ repositories {
 dependencies {
     implementation 'com.android.support:support-v4:29.2.0'
     implementation 'com.android.support:appcompat-v7:29.2.0'
-    implementation 'com.kbeacon:kbeaconlib:1.0.6'
+    implementation 'com.kkmcn.kbeaconlib:kbeaconlib:1.0.9'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'no.nordicsemi.android:dfu:1.10.3'
 }
